css: Try to fix the sidebar menu issue on mobile devices

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -12,3 +12,10 @@ div.hero-body {
 .hero.is-primary .title {
 	opacity: 0;
 }
+
+@media (max-width: 768px) {
+	aside.menu {
+		height: 10em;
+		overflow: auto;
+	}
+}
